--- a/mainpage.html
+++ b/mainpage.html
@@ -20,7 +20,7 @@
     <p>This is where I do stuff, I like... Kinda like a safe space.</p>
     <p>Here are some example images:</p>
     
-    <img src="image2.jpg" alt="pictures/mainpage/bg.png 2">
+    <img src="image2.jpg" alt="pictures/mainpage/bg.png">
 </main>
 </center>
   <footer>
