--- a/goals.html
+++ b/goals.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Vipinosa's Journal</h1>
         <nav>
-          <a href="mainpage.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="goals.html">Goals</a>
           <a href="#">Contact</a>
         </nav>
